#AUTOMAKE_OPTIONS = no-dependencies

override includedir=${prefix}/lib/flowdesigner/toolbox/ManyEars
override datadir=${prefix}/lib/flowdesigner/toolbox/ManyEars
override libdir=${prefix}/lib/flowdesigner/toolbox/ManyEars

toolboxdir = $(datadir)

toolbox_DATA = cube_mic_pos.mat \
	robot_mic_pos.mat

EXTRA_DIST = $(toolbox_DATA)

